@@ -1,0 +1,5 @@
+*,D
+*.pyc
+.*.swp
+.consign
+.sconsign
