@@ -1,0 +1,63 @@
+#!/usr/bin/env python
+#
+# Copyright (c) 2001, 2002 Steven Knight
+#
+# Permission is hereby granted, free of charge, to any person obtaining
+# a copy of this software and associated documentation files (the
+# "Software"), to deal in the Software without restriction, including
+# without limitation the rights to use, copy, modify, merge, publish,
+# distribute, sublicense, and/or sell copies of the Software, and to
+# permit persons to whom the Software is furnished to do so, subject to
+# the following conditions:
+#
+# The above copyright notice and this permission notice shall be included
+# in all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY
+# KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
+# WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+#
+
+__revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
+
+import TestSCons
+
+test = TestSCons.TestSCons()
+
+test.write('SConstruct', """
+env = {}
+Platform('cygwin')(env)
+print "'%s'" % env['PROGSUFFIX']
+Platform('posix')(env)
+print "'%s'" % env['PROGSUFFIX']
+Platform('win32')(env)
+print "'%s'" % env['PROGSUFFIX']
+SConscript('SConscript')
+""")
+
+test.write('SConscript', """
+env = {}
+Platform('cygwin')(env)
+print "'%s'" % env['LIBSUFFIX']
+Platform('posix')(env)
+print "'%s'" % env['LIBSUFFIX']
+Platform('win32')(env)
+print "'%s'" % env['LIBSUFFIX']
+""")
+
+expect = """'.exe'
+''
+'.exe'
+'.a'
+'.a'
+'.lib'
+"""
+
+test.run(stdout = expect)
+
+test.pass_test()
+
